onsite-courses-inner-page: set correct z-index property for the some blocks of the page

--- a/app/blocks/banner/banner.styl
+++ b/app/blocks/banner/banner.styl
@@ -166,7 +166,6 @@
 					height 2px
 					content ''
 					background-color #d3d3d3
-					z-index 1
 			
 			&-text
 				text-transform uppercase
