--- a/app/styles/common/global.styl
+++ b/app/styles/common/global.styl
@@ -367,7 +367,6 @@ ol
 	
 	.gallery-item
 		position relative
-		z-index 1
 		max-width 243px
 		display inline-block
 		margin 3px
